google: Fix reported file size

Ligdata recently added API to obtain a real file size. Use
gdata_documents_entry_get_file_size if libgdata 0.17.7 is available
instead of gdata_documents_entry_get_quota_used, which returns 0
in some cases (e.g. shared files).

https://bugzilla.gnome.org/show_bug.cgi?id=773053